[tool.poetry]
name = "Nukes-admin-bot"
version = "0.0.1"
description = "Simple bot that helps me administrate my chats."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/admin-bot"

[tool.poetry.dependencies]
alembic = "^1"
psycopg2-binary = "^2"
python = "^3.10"
raven = "^6"
telethon = "^1"
toml = "^0.10"
typer = "^0.6"

[tool.poetry.dev-dependencies]
autoflake = "^2"
black = "^23"
flake8 = "^6"
isort = "^5"
types-toml = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
profile = "black"
