[project]
name = "adminbot"
version = "0.0.1"
description = "Simple bot that helps me administrate my chats."
authors = [{ name = "Arne Beer", email = "contact@arne.beer" }]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1",
  "requests>=2.32.3",
  "sentry-sdk>=2",
  "telethon>=1",
  "toml>=0.10",
  "typer>=0.15",
]

[project.urls]
Repository = "https://github.com/nukesor/admin-bot"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.uv]
dev-dependencies = ["ruff>=0.8", "types-toml>=0.10.8"]

# Check the Ruff documentation for more info on how to configure this
# General docs: https://docs.astral.sh/ruff/configuration/
# Explicit docs for individual settings: https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [".venv", "__init__.py"]

[tool.ruff.lint]
select = [
  "E",   # Pycodestyle
  "F",   # Pyflakes
  "I",   # Isort
  "UP",  # Language feature updates
  "RUF", # Ruff Rules
]
fixable = [
  "E",
  "F",
  "I",
  "UP",  # Language feature updates
  "RUF", # Ruff Rules
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
